timeline more responsive all sizes

--- a/contact.html
+++ b/contact.html
@@ -37,16 +37,16 @@
                         <span>my music</span>
                     </div>
 
-                    <div class="icon-menu video">
+                    <div class="icon-menu video video">
                         <a href="video.html"><i class="far fa-play-circle fa-2x"></i></a>
                         <span>my videos</span>
                     </div>
 
-                    <div class="icon-menu contact-current">
+                    <div class="icon-menu contact contact-current">
                         <a href="contact.html"><i class="fas fa-phone-alt fa-2x"></i></a>
                         <span>contact me</span>
                     </div>
-                    
+
                 </div>
             </div>
 
@@ -59,8 +59,10 @@
                     </ul>
                     <div class="burger-footer">
                         <a href="https://soundcloud.com/camillagc"><i class="fab fa-soundcloud fa-2x"></i></a>
-                        <a href="https://www.facebook.com/camilla.clausen"><i class="fab fa-facebook-square fa-2x"></i></a>
-                        <a href="https://www.linkedin.com/in/camillgrothclausen/"><i class="fab fa-linkedin-in fa-2x"></i></a>
+                        <a href="https://www.facebook.com/camilla.clausen"><i
+                                class="fab fa-facebook-square fa-2x"></i></a>
+                        <a href="https://www.linkedin.com/in/camillgrothclausen/"><i
+                                class="fab fa-linkedin-in fa-2x"></i></a>
                         <a href="https://www.instagram.com/camigrothclau/"><i class="fab fa-instagram fa-2x"></i></a>
                     </div>
                 </div>
@@ -106,8 +108,7 @@
             <div class="some-links">
                 <a href="https://soundcloud.com/camillagc"><i class="fab fa-soundcloud fa-1x"></i></a>
                 <a href="https://www.facebook.com/camilla.clausen"><i class="fab fa-facebook-square fa-1x"></i></a>
-                <a href="https://www.linkedin.com/in/camillgrothclausen/"><i
-                        class="fab fa-linkedin-in fa-1x"></i></a>
+                <a href="https://www.linkedin.com/in/camillgrothclausen/"><i class="fab fa-linkedin-in fa-1x"></i></a>
                 <a href="https://www.instagram.com/camigrothclau/"><i class="fab fa-instagram fa-1x"></i></a>
             </div>
             <ul>
