--- a/video.html
+++ b/video.html
@@ -37,16 +37,16 @@
                         <span>my music</span>
                     </div>
 
-                    <div class="icon-menu video">
+                    <div class="icon-menu video video-current">
                         <a href="video.html"><i class="far fa-play-circle fa-2x"></i></a>
                         <span>my videos</span>
                     </div>
 
-                    <div class="icon-menu contact">
+                    <div class="icon-menu contact contact">
                         <a href="contact.html"><i class="fas fa-phone-alt fa-2x"></i></a>
                         <span>contact me</span>
                     </div>
-                    
+
                 </div>
             </div>
 
