new html-title and faq

--- a/aboutme.html
+++ b/aboutme.html
@@ -8,7 +8,7 @@
     <link href="css/style.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:400,600|Titillium+Web:400,700&display=swap"
         rel="stylesheet">
-    <title>Document</title>
+    <title>Camilla Groth Clausen - About</title>
 </head>
 
 <body>
@@ -46,7 +46,7 @@
                         <a href="contact.html"><i class="fas fa-phone-alt fa-2x"></i></a>
                         <span>contact me</span>
                     </div>
-                    
+
                 </div>
             </div>
 
@@ -101,9 +101,10 @@
                         pre-understandings are challenged and I learn about digital behaviours, opinions attached to
                         human goals within the human-computer-interactions.</p>
 
-                    <p>I also love to code and create simple and colourful designs. After working with various it
-                        departments and clever developers and designers I’ve found out that multimediadesign is a great
-                        interest for me as well.</p>
+                    <p>I especially enjoy coding and creating simple, creative and colourful designs. After working with
+                        various it
+                        departments and clever developers and designers I’ve found out that webdesign is a great
+                        interest for me and I'm about to do a career change moving into UI/Frontend Design.</p>
 
                     <p>When I’m not joggling with tasks within the digital field I produce music, sing in a choir
                         (we’re called Røst, please check us out), dance Chorus Line (a dance from the thirties) and go
