--- a/faq.html
+++ b/faq.html
@@ -8,7 +8,7 @@
     <link href="css/style.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:400,600|Titillium+Web:400,700&display=swap"
         rel="stylesheet">
-    <title>Document</title>
+    <title>Camilla Groth Clausen - FAQ</title>
 </head>
 
 <body>
@@ -46,7 +46,7 @@
                         <a href="contact.html"><i class="fas fa-phone-alt fa-2x"></i></a>
                         <span>contact me</span>
                     </div>
-                    
+
                 </div>
             </div>
 
@@ -88,10 +88,10 @@
                 <div class="faq-questions">
                     <h2 class="txt-headline">questions</h2>
                     <a href="#question1">
-                        <p>Why do you enjoy webdesign and coding?</p>
+                        <p>What do you enjoy about webdesign and coding?</p>
                     </a>
                     <a href="#question2">
-                        <p>What do you find as important when practicing UX Research?
+                        <p>What do you find as being important when practicing UX Research?
                         </p>
                     </a>
                     <a href="#question3">
@@ -109,14 +109,11 @@
                     <a href="#question7">
                         <p>Do you do sports?</p>
                     </a>
-                    <a href="#question8">
-                        <p>Sugary or salty snacks?</p>
-                    </a>
                 </div>
 
                 <div class="faq-answers">
                     <div class="txt-box">
-                        <h2 id="question1" class="txt-headline">Why do you enjoy webdesign and coding?</h2>
+                        <h2 id="question1" class="txt-headline">What do you enjoy about webdesign and coding?</h2>
                         <p>I’m a problem solver! And I love to organise and structure code, I even think code can look
                             very
                             beautiful. Since I’ve worked with UX for many years I think about how to make my code
@@ -131,7 +128,8 @@
                     </div>
 
                     <div class="txt-box">
-                        <h2 id="question2" class="txt-headline">What do you find as important when practicing UX Research?</h2>
+                        <h2 id="question2" class="txt-headline">What do you find as being important when practicing UX
+                            Research?</h2>
                         <p>First of all, know your methods and research techniques, choose your research method based on
                             the
                             project goal and be careful that you keep that goal in mind throughout the whole process. If
