--- a/work.html
+++ b/work.html
@@ -8,7 +8,7 @@
     <link href="css/style.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:400,600|Titillium+Web:400,700&display=swap"
         rel="stylesheet">
-    <title>Document</title>
+    <title>Camilla Groth Clausen - Work</title>
 </head>
 
 <body>
@@ -46,7 +46,7 @@
                         <a href="contact.html"><i class="fas fa-phone-alt fa-2x"></i></a>
                         <span>contact me</span>
                     </div>
-                    
+
                 </div>
             </div>
 
@@ -80,7 +80,8 @@
 
         <div class="work-content">
             <div class="work-container">
-                <p class="work-descr" id="top">I have handpicked a couple of different projects I found fun, challenging and that
+                <p class="work-descr" id="top">I have handpicked a couple of different projects I found fun, challenging
+                    and that
                     I've learned a
                     lot from.</p>
                 <div class="projects">
@@ -105,24 +106,34 @@
 
                 <div class="mobile-btns">
                     <div class="mobile-btn">
-                        <a href="#a-b"><p>APP MENU STRUCTURE: A/B USABILITY TEST</p>
-                        <i class="fas fa-angle-right"></i></a>
+                        <a href="#a-b">
+                            <p>APP MENU STRUCTURE: A/B USABILITY TEST</p>
+                            <i class="fas fa-angle-right"></i>
+                        </a>
                     </div>
                     <div class="mobile-btn">
-                        <a href="#in-store"><p>IN-STORE PRODUCT, EYE TRACKING RESEARCH</p>
-                        <i class="fas fa-angle-right"></i></a>
+                        <a href="#in-store">
+                            <p>IN-STORE PRODUCT, EYE TRACKING RESEARCH</p>
+                            <i class="fas fa-angle-right"></i>
+                        </a>
                     </div>
                     <div class="mobile-btn">
-                        <a href="#diabetes"><p>WORKSHOPS FOR TEENS WITH DIABETES</p>
-                        <i class="fas fa-angle-right"></i></a>
+                        <a href="#diabetes">
+                            <p>WORKSHOPS FOR TEENS WITH DIABETES</p>
+                            <i class="fas fa-angle-right"></i>
+                        </a>
                     </div>
                     <div class="mobile-btn">
-                        <a href="#citizen"><p>CITIZEN JOURNEYS IN MUNICIPALITY SYSTEMS</p>
-                        <i class="fas fa-angle-right"></i></a>
+                        <a href="#citizen">
+                            <p>CITIZEN JOURNEYS IN MUNICIPALITY SYSTEMS</p>
+                            <i class="fas fa-angle-right"></i>
+                        </a>
                     </div>
                     <div class="mobile-btn">
-                        <a href="#gas"><p>IN-FIELD (GAS STATION) UX APP RESEARCH</p>
-                        <i class="fas fa-angle-right"></i></a>
+                        <a href="#gas">
+                            <p>IN-FIELD (GAS STATION) UX APP RESEARCH</p>
+                            <i class="fas fa-angle-right"></i>
+                        </a>
                     </div>
                 </div>
 
