--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="css/style.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:400,600|Titillium+Web:400,700&display=swap"
         rel="stylesheet">
-    <title>Document</title>
+    <title>Camilla Groth Clausen</title>
 </head>
 
 <body>
@@ -47,7 +47,7 @@
                         <a href="contact.html"><i class="fas fa-phone-alt fa-2x"></i></a>
                         <span>contact me</span>
                     </div>
-                    
+
                 </div>
             </div>
 
