--- a/video.html
+++ b/video.html
@@ -8,7 +8,7 @@
     <link href="css/style.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:400,600|Titillium+Web:400,700&display=swap"
         rel="stylesheet">
-    <title>Document</title>
+    <title>Camilla Groth Clausen - Video</title>
 </head>
 
 <body>
