--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
         <div class="home-content">
             <div class="cami-pic-div">
-                <img src="img/tilhjemmeside.jpg" class="camilla-on-pic">
+                <img src="img/camillafront.png" class="camilla-on-pic">
             </div>
 
 
