faq parts and hover

--- a/faq.html
+++ b/faq.html
@@ -86,40 +86,34 @@
 
             <div class="faq-txt">
                 <div class="faq-questions">
-                    <h2 class="txt-headline">questions</h2>
-                    <a href="#question1">
-                        <p>What do you enjoy about webdesign and coding?</p>
-                    </a>
-                    <a href="#question2">
-                        <p>What do you find as being important when practicing UX Research?
-                        </p>
-                    </a>
-                    <a href="#question3">
-                        <p>What’s your favorite tv-show?</p>
-                    </a>
-                    <a href="#question4">
-                        <p>What’s your favorite song?</p>
-                    </a>
-                    <a href="#question5">
-                        <p>What was your most interesting adventure?</p>
-                    </a>
-                    <a href="#question6">
-                        <p>What’s your role in teamwork?</p>
-                    </a>
-                    <a href="#question7">
-                        <p>Do you do sports?</p>
-                    </a>
+                    <div class="faq-q-career">
+                        <h2 class="txt-headline">Career</h2>
+                        <p><a href="#question1">What do you enjoy about webdesign and coding?</a></p>
+                        <p><a href="#question2">What do you find as being important when practicing UX Research?
+                            </a></p>
+                        <p><a href="#question3">What’s your role in teamwork?</a></p>
+                    </div>
+
+                    <div class="faq-q-personal">
+                        <h2 class="txt-headline">Personal Vibes</h2>
+                        <p><a href="#question4">What’s your favorite tv-show?</a></p>
+                        <p><a href="#question5">What’s your favorite song?</a></p>
+                        <p><a href="#question6">What was your most exciting adventure?</a></p>
+                        <p><a href="#question7">Do you do sports?</a></p>
+                    </div>
                 </div>
 
                 <div class="faq-answers">
                     <div class="txt-box">
                         <h2 id="question1" class="txt-headline">What do you enjoy about webdesign and coding?</h2>
-                        <p>I’m a problem solver! And I love to organise and structure code, I even think code can look
+                        <p>I’m a problem solver! And I love to organise and structure code, I even think code can
+                            look
                             very
                             beautiful. Since I’ve worked with UX for many years I think about how to make my code
                             user-friendly
                             to my colleagues who’s probably also going to work with that code. And that part of
-                            user-friendliness is fun as well, I think. For the design part I love aesthetics, I draw and
+                            user-friendliness is fun as well, I think. For the design part I love aesthetics, I draw
+                            and
                             paint a
                             lot in my sparetime, I love colours and figures and all that’s a beauty for the eye. AND
                             I
@@ -128,13 +122,17 @@
                     </div>
 
                     <div class="txt-box">
-                        <h2 id="question2" class="txt-headline">What do you find as being important when practicing UX
+                        <h2 id="question2" class="txt-headline">What do you find as being important when practicing
+                            UX
                             Research?</h2>
-                        <p>First of all, know your methods and research techniques, choose your research method based on
+                        <p>First of all, know your methods and research techniques, choose your research method
+                            based on
                             the
-                            project goal and be careful that you keep that goal in mind throughout the whole process. If
+                            project goal and be careful that you keep that goal in mind throughout the whole
+                            process. If
                             you
-                            loose track of the project goal and purpose you end of with (probably interesting) results,
+                            loose track of the project goal and purpose you end of with (probably interesting)
+                            results,
                             that
                             don’t answer the questions you had to begin with.
 
@@ -142,59 +140,61 @@
                             interview
                             question in a tricky or leading way?
 
-                            Second, how and where do you retain your research insights within the company and how can
+                            Second, how and where do you retain your research insights within the company and how
+                            can
                             different
-                            stakeholders access specific insights when they need to? It shouldn’t be time consuming for
-                            stakeholders to find the insights they are looking for. Forget about long reports but keep
+                            stakeholders access specific insights when they need to? It shouldn’t be time consuming
+                            for
+                            stakeholders to find the insights they are looking for. Forget about long reports but
+                            keep
                             it as
-                            short and clear as possible - and think about stakeholder roles; a marketing colleague is
+                            short and clear as possible - and think about stakeholder roles; a marketing colleague
+                            is
                             probably
                             interested in other insights than developers and c-level something third etc.
                         </p>
                     </div>
 
                     <div class="txt-box">
-                        <h2 id="question3" class="txt-headline">What’s your favorite tv-show</h2>
-                        <p>That would be Black Mirror or Game of Thrones. But after watching all 8 seasons of Dexter
-                            this is a competitor too.
-                        </p>
-                    </div>
-
-                    <div class="txt-box">
-                        <h2 id="question4" class="txt-headline">What’s your favorite song?</h2>
-                        <p>I have many favourite songs, but Teardrops by Whomack and Whomack will always take me to the
-                            dance floor. Like Fleetwood Mac’s ‘Everywhere’ or Pretenders’ ‘Don’t get me wrong’. And the
-                            whole ‘Jungle’ album by Jungle is fantastic, and they are great live too.
-                        </p>
-                    </div>
-
-                    <div class="txt-box">
-                        <h2 id="question5" class="txt-headline">What was your most interesting adventure?</h2>
-                        <p>In 2014 my family and I sailed across the Atlantic Sea in our family sail boat. From Gran
-                            Canaria to Caribbean Islands. This was a great adventure! 20 days to sea without any land in
-                            sight. I’ll never forget those starry nights full of shooting stars on the sky.
-                        </p>
-                    </div>
-
-                    <div class="txt-box">
-                        <h2 id="question6" class="txt-headline">What’s your role in teamwork?</h2>
-                        <p>I like to make sure that everyone gets heard. I bring a lot of creative ideas to the table.
+                        <h2 id="question3" class="txt-headline">What’s your role in teamwork?</h2>
+                        <p>I like to make sure that everyone gets heard. I bring a lot of creative ideas to the
+                            table.
                             I’m a ‘producer’ who enjoys to turn thinking into practice and make sure that things get
                             things done.
                         </p>
                     </div>
 
                     <div class="txt-box">
-                        <h2 id="question7" class="txt-headline">Do you do sports?</h2>
-                        <p>I’ve been dancing all of my life. Different genres. Now, I run up stairs (yep, as an
-                            exercise) and I do the plank everyday. I love yoga as well and go to classes when time is.
+                        <h2 id="question4" class="txt-headline">What’s your favorite tv-show</h2>
+                        <p>That would be Black Mirror or Game of Thrones. But after watching all 8 seasons of Dexter
+                            this is a competitor too.
                         </p>
                     </div>
 
                     <div class="txt-box">
-                        <h2 id="question8" class="txt-headline">Sugary or salty snacks?</h2>
-                        <p>I have to say: sugar! Bland-selv-slik in Denmark. That’s absolutely a great invention. But I
-                            actually have a pretty severe weakness for ‘Ostepops’.
+                        <h2 id="question5" class="txt-headline">What’s your favorite song?</h2>
+                        <p>I have many favourite songs, but Teardrops by Whomack and Whomack will always take me to
+                            the
+                            dance floor. Like Fleetwood Mac’s ‘Everywhere’ or Pretenders’ ‘Don’t get me wrong’. And
+                            the
+                            whole ‘Jungle’ album by Jungle is fantastic, and they are great live too.
+                        </p>
+                    </div>
+
+                    <div class="txt-box">
+                        <h2 id="question6" class="txt-headline">What was your most excited adventure?</h2>
+                        <p>In 2014 my family and I sailed across the Atlantic Sea in our family sail boat. From Gran
+                            Canaria to Caribbean Islands. This was a great adventure! 20 days to sea without any
+                            land in
+                            sight. I’ll never forget those starry nights full of shooting stars on the sky.
+                        </p>
+                    </div>
+
+                    <div class="txt-box">
+                        <h2 id="question7" class="txt-headline">Do you do sports?</h2>
+                        <p>I’ve been dancing all of my life. Different genres. Now, I run up stairs (yep, as an
+                            exercise) and I do the plank everyday. I love yoga as well and go to classes when time
+                            is.
                         </p>
                     </div>
 
