--- a/index.html
+++ b/index.html
@@ -103,6 +103,21 @@
                     <i class="fas fa-briefcase fa-4x"></i>
                     <div class="timeline-txt">
                         <div class="year">
+                            <p>06.2020</p>
+                        </div>
+                        <div>
+                            <h2 class="txt-headline">Frontend Development Internship, WhitePixel
+                            </h2>
+                            <p>4 weeks internship at WhitePixel on Vesterbro in Copenhagen. Tasks: building websites in
+                                Prismic CMS and Vue and help the graphic design team with design tasks.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="icon-and-text">
+                    <i class="fas fa-briefcase fa-4x"></i>
+                    <div class="timeline-txt">
+                        <div class="year">
                             <p>10.2019-03.2020</p>
                         </div>
                         <div>
