--- a/index.html
+++ b/index.html
@@ -103,6 +103,21 @@
                     <i class="fas fa-briefcase fa-4x"></i>
                     <div class="timeline-txt">
                         <div class="year">
+                            <p>09.2020 - current</p>
+                        </div>
+                        <div>
+                            <h2 class="txt-headline">Frontend Developer, Sorthvid/Dept Agency
+                            </h2>
+                            <p>Frontend development and team collaboration with UX and Digital Design teams to build
+                                great web solutions for our customers.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="icon-and-text">
+                    <i class="fas fa-briefcase fa-4x"></i>
+                    <div class="timeline-txt">
+                        <div class="year">
                             <p>06.2020</p>
                         </div>
                         <div>
