--- a/music.html
+++ b/music.html
@@ -86,49 +86,13 @@
 
         <div class="music-content">
             <h1 class="title music">my music</h1>
-            <img src="img/line-drawing-music.png">
+            <!-- <img src="img/line-drawing-music.png"> -->
             <div class="soundcloud-box">
-                <div>
-                    <iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay"
-                        src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/776094625&color=%23cadcc4&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
-                    <div
-                        style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;">
-                        <a href="https://soundcloud.com/camillagc" title="Camilla Clausen" target="_blank"
-                            style="color: #cccccc; text-decoration: none;">Camilla Clausen</a> · <a
-                            href="https://soundcloud.com/camillagc/your-effortless-go-to" title="Your Effortless Go To"
-                            target="_blank" style="color: #cccccc; text-decoration: none;">Your Effortless Go To</a>
-                    </div>
 
-                    <iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay"
-                        src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/809543713&color=%23cadcc4&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
-                    <div
-                        style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;">
-                        <a href="https://soundcloud.com/camillagc" title="Camilla Clausen" target="_blank"
-                            style="color: #cccccc; text-decoration: none;">Camilla Clausen</a> · <a
-                            href="https://soundcloud.com/camillagc/the-holiday-1" title="The Holiday" target="_blank"
-                            style="color: #cccccc; text-decoration: none;">The Holiday</a>
-                    </div>
+                <iframe src="https://open.spotify.com/embed/artist/5nlEJoRIVuG51bPrTuYlq5" width="300" height="380"
+                    frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
 
-                    <iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay"
-                        src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/809543722&color=%23cadcc4&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
-                    <div
-                        style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;">
-                        <a href="https://soundcloud.com/camillagc" title="Camilla Clausen" target="_blank"
-                            style="color: #cccccc; text-decoration: none;">Camilla Clausen</a> · <a
-                            href="https://soundcloud.com/camillagc/rain-in-the-dust-1" title="Rain In The Dust"
-                            target="_blank" style="color: #cccccc; text-decoration: none;">Rain In The Dust</a>
-                    </div>
 
-                    <iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay"
-                        src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/809543737&color=%23cadcc4&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
-                    <div
-                        style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;">
-                        <a href="https://soundcloud.com/camillagc" title="Camilla Clausen" target="_blank"
-                            style="color: #cccccc; text-decoration: none;">Camilla Clausen</a> · <a
-                            href="https://soundcloud.com/camillagc/black-trees-1" title="Black Trees" target="_blank"
-                            style="color: #cccccc; text-decoration: none;">Black Trees</a></div>
-
-                </div>
             </div>
         </div>
     </div>
