--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                             <p>09.2020 - current</p>
                         </div>
                         <div>
-                            <h2 class="txt-headline">Frontend Developer, Sorthvid/Dept Agency
+                            <h2 class="txt-headline">Frontend Developer, Sort/Dept Agency
                             </h2>
                             <p>Frontend development and team collaboration with UX and Digital Design teams to build
                                 great web solutions for our customers.
